--- a/w224_forms_discussion-main/index.html
+++ b/w224_forms_discussion-main/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Add fonts from Adobe fonts or Google Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/sjz2qdt.css">
     <title>Submit Recommendations</title>
     <!-- Add a favicon -->
 </head>
 <body>
   <!-- Implement a skip to main! -->
-    <!-- <form action="" method="post"> Connect to formspree.io-->
+      <form action="https://formspree.io/f/xkndzkew" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br><br>
 <div class="radio">
